8275033: Drag and drop a file produces NullPointerException Cannot read field "dragboard"

Reviewed-by: kcr, angorya